--- a/package.json
+++ b/package.json
@@ -28,9 +28,14 @@
     "@electron-forge/plugin-auto-unpack-natives": "^7.9.0",
     "@electron-forge/plugin-fuses": "^7.9.0",
     "@electron-forge/plugin-vite": "^7.9.0",
+    "@electron-forge/publisher-github": "^7.9.0",
     "@electron/fuses": "^1.8.0",
     "@vitejs/plugin-vue": "^6.0.1",
     "electron": "38.1.2",
     "vite": "^5.4.20"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/constantberthereau/ElectronJSDemo"
   }
 }
